--- a/index.qmd
+++ b/index.qmd
@@ -10,12 +10,14 @@ Whether you’re designing a map for a publication, seeking spatial data for a c
 
 We also support instructors who want to integrate mapping or spatial data into their teaching. This includes help designing assignments, identifying appropriate tools or datasets, and developing lab activities or course-specific GIS resources.
 
+::: {.callout-note}
 Our work includes:
 
-- Consultations on spatial methods and data  
-- Guidance with GIS tools including ArcGIS Pro, QGIS, R, and open mapping platforms  
-- Instructional support for incorporating mapping into the classroom  
-- Curation of AU’s geospatial and statistical data collections  
+-   Consultations on spatial methods and data
+-   Guidance with GIS tools including ArcGIS Pro, QGIS, R, and open mapping platforms
+-   Instructional support for incorporating mapping into the classroom
+-   Curation of AU’s geospatial and statistical data collections
+:::
 
 Consultations are available by appointment. While we do not provide one-on-one software instruction, we can help you clarify research questions, identify appropriate tools and training resources, and troubleshoot issues related to spatial data and analysis. To request a consultation or learn more about our services, visit our [Bookings site](https://outlook.office.com/book/GeospatialResearchLab@american0.onmicrosoft.com/?ismsaljsauthenabled).
 
