--- a/workshops.qmd
+++ b/workshops.qmd
@@ -1,4 +1,42 @@
 ---
 title: "Workshops"
-editor: visual
 ---
+
+# Workshops
+
+The Geospatial Research Lab hosts workshops throughout the semester on topics in GIS, mapping, and data literacy. These sessions are open to students, faculty, and staff across American University. This page provides information about upcoming workshops and also serves as an archive where you can find handouts, slides, and other materials from past sessions.  
+
+You can find the full schedule and register for upcoming events on our [AU Library Workshops Calendar](https://american.libcal.com/calendar/?cid=###).  
+
+---
+
+## Upcoming Workshops
+
+::: {.callout-note}
+### Data Prep for GIS Research  
+*September 2025*  
+This session introduced strategies for preparing tabular and spatial data for GIS analysis. Topics included cleaning messy data, setting up file structures, and preparing datasets for ArcGIS Pro and QGIS.  
+➡️ [View workshop materials](https://geospatialresearchlab.github.io/workshop-data-prep/)
+:::
+
+::: {.callout-note}
+### Zombie Data: Preserving At-Risk Public Datasets  
+*October 2025 (Scary Data Week)*  
+This interactive workshop focused on rescuing endangered public datasets using tools like the Internet Archive’s Wayback Machine and DataLumos. Attendees learned practical preservation techniques while contributing to data rescue efforts.  
+➡️ [View workshop materials](https://geospatialresearchlab.github.io/zombie-data/)
+:::
+
+---
+
+## Past Workshops
+
+::: {.callout-note}
+### Mapping Small Joys: Critical Mapping in the Classroom  
+*August 2025*  
+Part of the Teaching in Place workshop series, this hands-on session used sketch mapping and zine-making to explore spatial thinking as a teaching tool. Participants created “small joys” maps and discussed ethical considerations for mapping student experiences.  
+➡️ [View workshop materials](https://geospatialresearchlab.github.io/mapping-small-joys/)
+:::
+
+
+
+
