workshop content updates

--- a/index.qmd
+++ b/index.qmd
@@ -2,15 +2,13 @@
 title: "Geospatial Research Lab"
 ---
 
-# Geospatial Research Lab
-
 The Geospatial Research Lab is the University Library’s geospatial research support program for faculty, students, and staff at American University. We provide expertise in geographic information systems (GIS), spatial analysis, and mapping, helping the AU community apply spatial thinking and geospatial tools across disciplines. Services include guidance on data acquisition, project design, software, and map-based storytelling.
 
 Whether you’re designing a map for a publication, seeking spatial data for a capstone, or exploring GIS methods for a class project, the Geospatial Research Lab can help. We work with researchers at every stage from idea development through analysis and presentation.
 
 We also support instructors who want to integrate mapping or spatial data into their teaching. This includes help designing assignments, identifying appropriate tools or datasets, and developing lab activities or course-specific GIS resources.
 
-::: {.callout-note}
+::: callout-note
 Our work includes:
 
 -   Consultations on spatial methods and data
