--- a/workshops.qmd
+++ b/workshops.qmd
@@ -13,6 +13,7 @@ The Geospatial Research Lab hosts workshops throughout the semester on topics in
 
 *October 2025*\
 This session is part of the AI in Research series hosted by the Digital Research and Innovation Lab, focused on helping graduate students use emerging tools to explore, organize, and communicate research more effectively. In this workshop, we’ll reframe the literature review not as a writing assignment, but as a discovery process grounded in digital scholarship. We’ll begin with the research you already know—articles from your coursework, advisor recommendations, and foundational texts in your field—and show how AI-supported tools like Google Scholar, Semantic Scholar, and Research Rabbit can help you follow citation networks, trace conceptual lineages, and identify related work across disciplines. Along the way, we’ll demonstrate how tools like Zotero and LibKey Nomad can streamline your research workflow and help you manage your growing body of sources. Whether you’re starting a thesis, preparing for comps, or just learning to navigate the scholarly conversation, this session offers practical, research-focused strategies for using AI to build an intentional, well-scoped literature review.\
+➡️ [View workshop page](https://geospatialresearchlab.github.io/workshop-lit-review-2025)
 :::
 
 ::: callout-note
