--- a/workshops.qmd
+++ b/workshops.qmd
@@ -46,5 +46,5 @@ Part of the Center for Faculty Excellence's August Faculty Workshops, this inter
 
 *April 2025*\
 In collaboriation with the Digital Research and Innovation Lab, this fun and practical workshop helped participants bring order and clarity to messy spreadsheets using Marie Kondo-inspired principles in Excel. The session guided attendees through removing duplicates, tidying columns, and transforming cluttered datasets into meaningful insights. Whether participants were Excel novices or seasoned pros, they left with a fresh perspective on data organization and a toolkit of techniques for maintaining a sparkling, efficient workflow.\
-➡️ [View workshop materials](https://github.com/GeospatialResearchLab/workshop-data-cleaning-excel-2025)
+➡️ [View workshop archive](https://github.com/GeospatialResearchLab/workshop-data-cleaning-excel-2025)
 :::
