--- a/workshops.qmd
+++ b/workshops.qmd
@@ -9,30 +9,36 @@ The Geospatial Research Lab hosts workshops throughout the semester on topics in
 ## Upcoming Workshops
 
 ::: callout-note
-### AI Tools for Research: Getting Started with Literature Reviews
+No scheduled workshops
+::: 
+
+------------------------------------------------------------------------
+
+## Past Workshops
+
+::: callout-note
+### **Data Preservation Workshop: Bringing Data Back from the Dead!**
+
+*October 2025 (Scary Data Week)*\
+Digital data doesn’t always stay put. Websites change, tools disappear, and valuable datasets can quietly slip offline—sometimes forever. In this Scary Data Week workshop, you’ll learn how to bring data “back from the dead” using the Internet Archive’s Wayback Machine. We’ll explore how and why datasets vanish, walk through the steps of preserving webpages, and give you the chance to reanimate a dataset of your own. No technical experience required—just curiosity, a laptop, and a willingness to protect public knowledge from the digital grave. Whether you’re a researcher, student, or data enthusiast, you’ll leave this session with practical skills and a deeper understanding of the role you can play in preserving civic information.\
+➡️ [View workshop archive](https://github.com/GeospatialResearchLab/workshop-data-preservation-2025) 
+:::
+
+::: callout-note
+### **AI Tools for Research: AI-Assisted Strategies for Cleaning and Preparing Research Data**
+
+*October 2025*\
+This hands-on workshop introduces strategies for cleaning messy research data and shows how generative AI tools can support that process. You’ll learn how to identify common issues in tabular datasets including missing values, inconsistent formatting, and duplicates and how to plan a reproducible cleanup workflow. Then, we’ll explore how to use generative AI to help write R code for cleaning tasks, with an emphasis on producing reusable scripts and well-documented steps. Designed for graduate students working with real-world data, this session is useful for anyone preparing a dataset for analysis, visualization, or sharing. No prior experience with R is helpful, but not required.\
+➡️ [View workshop archive](https://github.com/GeospatialResearchLab/workshop-data-cleaning-GenAI-R-2025)
+:::
+
+::: callout-note
+### **AI Tools for Research: Getting Started with Literature Reviews**
 
 *October 2025*\
 This session is part of the AI in Research series hosted by the Digital Research and Innovation Lab, focused on helping graduate students use emerging tools to explore, organize, and communicate research more effectively. In this workshop, we’ll reframe the literature review not as a writing assignment, but as a discovery process grounded in digital scholarship. We’ll begin with the research you already know—articles from your coursework, advisor recommendations, and foundational texts in your field—and show how AI-supported tools like Google Scholar, Semantic Scholar, and Research Rabbit can help you follow citation networks, trace conceptual lineages, and identify related work across disciplines. Along the way, we’ll demonstrate how tools like Zotero and LibKey Nomad can streamline your research workflow and help you manage your growing body of sources. Whether you’re starting a thesis, preparing for comps, or just learning to navigate the scholarly conversation, this session offers practical, research-focused strategies for using AI to build an intentional, well-scoped literature review.\
 ➡️ [View workshop page](https://geospatialresearchlab.github.io/workshop-lit-review-2025)
 :::
-
-::: callout-note
-### AI Tools for Research: Cleaning and Documenting Messy Data with Generative AI
-
-*October 2025*\
-This hands-on workshop introduces strategies for cleaning messy research data and shows how generative AI tools can support that process. You’ll learn how to identify common issues in tabular datasets including missing values, inconsistent formatting, and duplicates and how to plan a reproducible cleanup workflow. Then, we’ll explore how to use generative AI to help write R code for cleaning tasks, with an emphasis on producing reusable scripts and well-documented steps. Designed for graduate students working with real-world data, this session is useful for anyone preparing a dataset for analysis, visualization, or sharing. No prior experience with R is helpful, but not required.\
-:::
-
-::: callout-note
-### Data Preservation Workshop: Bringing Data Back from the Dead!
-
-*October 2025 (Scary Data Week)*\
-Digital data doesn’t always stay put. Websites change, tools disappear, and valuable datasets can quietly slip offline—sometimes forever. In this Scary Data Week workshop, you’ll learn how to bring data “back from the dead” using the Internet Archive’s Wayback Machine. We’ll explore how and why datasets vanish, walk through the steps of preserving webpages, and give you the chance to reanimate a dataset of your own. No technical experience required—just curiosity, a laptop, and a willingness to protect public knowledge from the digital grave. Whether you’re a researcher, student, or data enthusiast, you’ll leave this session with practical skills and a deeper understanding of the role you can play in preserving civic information.\
-:::
-
-------------------------------------------------------------------------
-
-## Past Workshops
 
 ::: callout-note
 ## **Teaching in Place: Mapping as a Path to Critical Understanding**
