--- a/about.qmd
+++ b/about.qmd
@@ -2,20 +2,21 @@
 title: "Geospatial Research Lab"
 ---
 
-# What We Do
+## What We Do
 
 The Geospatial Research Lab is the University Library’s geospatial research support program for faculty, students, and staff at American University. We provide expertise in geographic information systems (GIS), spatial analysis, and mapping, helping the AU community apply spatial thinking and geospatial tools across disciplines. Services include guidance on data acquisition, project design, software, and map-based storytelling.
 
-# Support for Research
+## Support for Research
 
 Whether you’re exploring GIS methods for a class project, seeking spatial data for a capstone, or designing a map for a publication, the Geospatial Research Lab can help. We work with researchers at every stage from idea development through analysis and publication.
 
-# Support for Teaching
+## Support for Teaching
 
 We also support instructors who want to integrate mapping or spatial data into their teaching. This includes help designing assignments, identifying appropriate tools or datasets, and developing lab activities or course-specific GIS resources.
 
 ::: callout-note
-# Our work includes:
+
+## Our work includes:
 
 -   Consultations on spatial methods and data
 -   Guidance with GIS tools including ArcGIS Pro, QGIS, R, and open mapping platforms
@@ -24,11 +25,11 @@ We also support instructors who want to integrate mapping or spatial data into t
 -   Curation of AU’s geospatial and statistical data collections
 :::
 
-# Consultations
+## Consultations
 
 Consultations are available by appointment. While we do not provide one-on-one software instruction, we can help you clarify research questions, identify appropriate tools and training resources, and troubleshoot issues related to spatial data and analysis. To request a consultation or learn more about our services, visit our [Bookings site](https://outlook.office.com/book/GeospatialResearchLab@american0.onmicrosoft.com/?ismsaljsauthenabled).
 
-# Software & Lab Access
+## Software & Lab Access
 
 Looking for access to GIS software? Visit the [GIS & Cartography LibGuide](https://subjectguides.library.american.edu/gis/home) for more information.
 
